--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,15 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "declaration": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": [
+      "node",
+    ],
   },
   "include": [
     "src/**/*"
-  ]
+  ],
 }
