--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
   "author": "Juri Strumpflohner",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
+    "@babel/preset-env": "^7.4.1",
+    "@babel/preset-typescript": "^7.3.3",
+    "@openzeppelin/contracts": "^3.4.1",
     "@types/jasmine": "2.8.7",
     "@types/node": "7.0.0",
     "awesome-typescript-loader": "5.2.0",
@@ -35,16 +42,11 @@
     "typescript": "3.5.1",
     "webpack": "4.12.0",
     "webpack-cli": "3.0.8",
-    "webpack-dev-server": "3.1.4",
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
-    "@babel/preset-env": "^7.4.1",
-    "@babel/preset-typescript": "^7.3.3"
+    "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
     "@types/gl-matrix": "^3.2.0",
-    "gl-matrix": "^3.3.0"
+    "gl-matrix": "^3.3.0",
+    "truffle": "^5.2.3"
   }
 }
